# Organoid-Counting

./: .gitignore  AutoOrganoidCounter.bat  OrgaCount.py  OrganoidAnnotator.bat  OrganoidCounter.bat  README.md  dev_jupyter.ipynb  requirements.txt  setup.bat  setup.cfg  setup.py  setup1.bat  setup2.bat  viewer.py  viewerdel.py
LinuxMacOS/: AutoOrganoidCounter.sh  OrganoidAnnotator.sh  setupLinuxMacOS.sh
Windows/: AutoOrganoidCounter.bat  OrganoidAnnotator.bat  setupWindows.bat
organoid_counting/: __init__.py  napari.yaml  orga.py
