[metadata]
name = organoid-counting
version = 0.0.1
classifiers =
    Framework :: napari

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True
install_requires = 
    napari[all]==0.4.12
    magicgui[pyqt5]==0.3.7
    scikit-image==0.18.3
    napari-aicsimageio==0.6.1
    opencv-python==4.5.5.62

[options.entry_points]
napari.manifest =
    organoid-counting = organoid_counting:napari.yaml
